--- a/data/countries/de/by/kelheim/data.yaml
+++ b/data/countries/de/by/kelheim/data.yaml
@@ -6,6 +6,6 @@ state: Bayern
 district: Kelheim
 urls:
   - type: WEBSITE
-    url: https://gruene-keh.de/
+    url: https://www.gruene-keh.de/
   - type: FACEBOOK
     url: https://www.facebook.com/gruenekelheim/
