--- a/data/countries/de/by/oberallgaeu/data.yaml
+++ b/data/countries/de/by/oberallgaeu/data.yaml
@@ -18,4 +18,4 @@ state: Bayern
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-sonthofen.de
+    url: https://www.gruene-oa.de/ortsverbaende/sonthofen/
