--- a/data/countries/de/by/forchheim/data.yaml
+++ b/data/countries/de/by/forchheim/data.yaml
@@ -6,7 +6,7 @@ state: Bayern
 district: Forchheim
 urls:
   - type: WEBSITE
-    url: https://gruene-forchheim.de/
+    url: https://gruene-forchheim.de/startseite/
   - type: FACEBOOK
     url: https://www.facebook.com/gruene.forchheim/
   - type: INSTAGRAM
@@ -40,7 +40,7 @@ state: Bayern
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-graefenberg.de/
+    url: http://gruene-graefenberg.de/
 ---
 city: Neunkirchen am Brand
 country: DE
@@ -50,4 +50,4 @@ state: Bayern
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://gruene-neunkirchen-am-brand.de/
+    url: https://gruene-neunkirchen-am-brand.de/
