--- a/data/countries/de/by/fuerth-land/data.yaml
+++ b/data/countries/de/by/fuerth-land/data.yaml
@@ -22,7 +22,7 @@ state: Bayern
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://gruene-cadolzburg.de/
+    url: http://www.gruene-fuerth-land.de/category/ov-cadolzburg/
 ---
 city: Großhabersdorf
 country: DE
